# android-native-root-detection

./: .gitignore  CHANGELOG.md  README.md
docs/: API.md
examples/Simple Usage/: MainActivity.txt  app_level_build_gradle.txt
examples/android-app/: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
examples/android-app/app/: build.gradle  dictionary.txt  proguard-rules.pro
examples/android-app/app/src/main/: AndroidManifest.xml
examples/android-app/app/src/main/cpp/: CMakeLists.txt  mainClib.cpp
examples/android-app/app/src/main/java/com/example/rootdetection/: MainActivity.kt  SecurityChecker.kt  SecurityReceiver.kt  SecurityResultsAdapter.kt  SecurityService.kt
examples/android-app/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
examples/android-app/app/src/main/res/layout/: activity_main.xml  item_security_result.xml
examples/android-app/app/src/main/res/menu/: main_menu.xml
examples/android-app/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
examples/android-app/app/src/main/res/values-v35/: styles.xml
examples/android-app/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
src/: CMakeLists.txt  mainClib.cpp
